# esp_demos

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  build_config.yml  build_rules.yml
.github/workflows/: build.yml
components/ssd1306/: CMakeLists.txt  ssd1306.c
components/ssd1306/include/: font.h  ssd1306.h
components/st7789/: CMakeLists.txt  st7789.c
components/st7789/include/: st7789.h
examples/algorithm/mfcc/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/algorithm/omv_math/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/audio/: README.md
examples/audio/esp_sr/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/audio/max98357a/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/audio/music_spectrum/: CMakeLists.txt  sdkconfig.defaults
examples/audio/ns4150_player/: CMakeLists.txt  (+2 more)
examples/dl/: README.md
examples/http/: README.md
examples/http/http_baidu_img_classification/main/: CMakeLists.txt  Kconfig.projbuild  main.c
examples/http/http_baidu_img_classification/main/app_baidu/: app_baidu.c
examples/http/http_baidu_img_classification/main/app_baidu/include/: app_baidu.h
examples/http/http_baidu_img_classification/main/app_wifi/: app_wifi.c
examples/peripherals/: README.md
examples/protocols/: README.md
examples/system/build_two_target/main/: CMakeLists.txt  build_two_target.c  idf_component.yml
examples/ui/: README.md
examples/usb/: README.md
examples/usb/device/bulk_trans/main/: CMakeLists.txt  bulk_trans.c  idf_component.yml
examples/usb/device/bulk_trans/main/tusb/: tusb_config.h  usb_descriptors.c
tools/ci/: check_copyright_config.yaml
(+457 files in other folders)
